examples/test/testpolicy17129.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17129
  namespace: namespace94
spec:
  podSelector:
    matchLabels:
      key29: value25
      key23: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value23
          key8: value19
          key47: value2
      podSelector:
        matchLabels:
          key5: value48
          key30: value28
          key19: value40
